added some iOS icons. Fixed some UI stuff

--- a/nexwell/android/pom.xml
+++ b/nexwell/android/pom.xml
@@ -54,6 +54,7 @@
       <dependency>
           <groupId>com.codenameone</groupId>
           <artifactId>codenameone-core</artifactId>
+          <version>7.0.101</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
@@ -70,8 +71,15 @@
       </dependency>
 
   </dependencies>
-  
-  <profiles>
+    <repositories>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
+
+    <profiles>
       <profile>
           <id>run-android</id>
           <build>
